website/versioned_docs/version-1.x/GettingStarted.mdx
---
id: getting-started
title: Getting Started
custom_edit_url: https://github.com/lucasgmagalhaes/corde/blob/master/website/versioned_docs/version-1.0.0/GettingStarted.md
slug: /
---

Install Corde using [`yarn`](https://yarnpkg.com/en/package/corde):

```bash
yarn add --dev corde
```

Or [`npm`](https://www.npmjs.com/package/corde):

```bash
npm install --save-dev corde
```

Note: Corde documentation uses `yarn` commands, but `npm` will also work. You can compare `yarn` and `npm` commands in the [yarn docs, here](https://yarnpkg.com/en/docs/migrating-from-npm#toc-cli-commands-comparison).

:::info
This example uses [Discord.js](https://discord.js.org/#/) in the bot showcase.
:::

Let's get started writing a simple test for a bot that sends just send a simple message.

First, we need the `corde` config file. The fastest way to do that is by calling corde CLI with the following command:

```bash
yarn corde --init
```

This command will create the `corde.json` file in the root of your project. For more details about the `init` command
check the CLI documentation here.

This file will have the following structure:

```javascript
{
  "cordeTestToken":  "",
  "botTestId":  "",
  "botTestToken":  "",
  "guildId":  "",
  "channelId":  "",
  "botPrefix":  "+",
  "testFiles":  ["./test"]
}
```

With the config file created, we need to put the necesary data to getting started with tests.
Check configurations for details about each option.

Okay, after have the options setted, Let's create or first test.

Let's supose that we have a file called `bot.js` (our bot) and it's have the following structure:

```javascript title="bot.js"
const Discord = require('discord.js');
client.on('message', async (message) => {
  if (command === 'hello') {
    await message.channel.send('Hello!!');
  }
}

function loginBot() {
  client.login(config.token);
}

exports.client = client;
exports.loginBot = loginBot;
```

Then let's create a `test` folder in the root of your aplication and then a file called for example: `bot.test.js`.
By doing this, we have the following structure of files

```
.
├── bot.js
├── test
|   ├── bot.test.js
├── _site
├── corde.json
```

This bot have just a simple task: Send a fixed message when the users send **hello**.

So, we need to create a test to ensure that the bot will always send the fixed message (**Hello!!**) when
the user call **!hello** (`!` is the prefix for bot. Always use a prefix for your bot).

Let's implement the `bot.test.js`:

```javascript title="./tests/bot.test.js"
const { group, test, command, beforeStart, afterAll } = require("corde");
const { client, loginBot } = require("..");

beforeStart(() => {
  loginBot();
});

group("main commands", () => {
  test("hello command should return 'Hello!!'", () => {
    command("hello").mustReturn("Hello!!");
  });
});

afterAll(() => {
  client.destroy();
});
```

:::info
Corde does not have global function. We pretend to create then in the future.
:::

So, what we got here?

The first thing that we do is call `beforeStart` function. This function is mainly used to
init our bot connection (remember the `loginBot()`?).

Then we can declare the `group` function. Be clare that `group` and `test` functions are optional.
You can use just the `command` function. That is what make the magic happens. (uuuh)

`command` wait for the _command name_. Pay attemtion that we do not put the bot prefix. Corde already do it
for us. If we put it, we will se Corde sending `!!hello` to Discord (we do not want this).

After that, we call `mustReturn` with the parameter `Hello!!`. So, we are telling Corde that we expect that after sending `!hello`,
our bot should send `Hello!!`. And that is it.

To execute this test, we just need to call:

```bash
yarn corde
```

It will run all tests and print the result like follow:

<div style={{textAlign: 'center'}}>

![Result code](../../static/img/console_print.png)

</div>

And that is it.
